--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular": "^1.5.6",
     "angular-route": "^1.5.6",
     "body-parser": "^1.15.1",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "jquery": "^2.2.4"
   }
 }
