--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular-ui-calendar": "^1.0.2",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
-    "jquery": "^2.2.4"
+    "jquery": "^2.2.4",
+    "mongoose": "^4.5.0"
   }
 }
